Making minor changes